Ensure that the text never covers the arrow.
svn path=/new.plone.org/trunk/; revision=25453

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -792,13 +792,13 @@ dl.portlet dd {
 
 #download-link {
 	display: block;
-	width: 153px;
+	width: 123px;
 	height: 51px;
 	background: url(images/download-box.png) no-repeat;
 	color: white;
 	font-size: 12px;
 	font-weight: bold;
-	padding: 144px 0 0 10px;
+	padding: 144px 30px 0 10px;
 	margin: 0 auto;
 }
 
